--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
   "name": "data-driven",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Gaby-str.github.io/data-driven-web/build",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.1",
+    "@mui/material": "^6.4.1",
+    "@syncfusion/ej2-data": "^28.1.33",
+    "@syncfusion/ej2-react-dropdowns": "^28.1.39",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.9.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
