--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.9.0",
@@ -41,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.7",
+    "tailwindcss": "^3.4.17"
   }
 }
