--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_PDF_PATH=./pdf/
-PUBLIC_URL=./
+#PUBLIC_URL=./
+#si se despliega a github usar lo siguiente:
+PUBLIC_URL=./data-driven-web/build/
