--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-REACT_APP_PDF_PATH=./pdf/
-#PUBLIC_URL=./
+REACT_APP_PDF_PATH=./data-driven-web/build/pdf/
+PUBLIC_URL=./
 #si se despliega a github usar lo siguiente:
-PUBLIC_URL=./data-driven-web/build/
